@@ -291,6 +291,7 @@ enum {
   W_BINARY_INTEGER_CONSTANT_C23 = 261, /* binary integer constant requires ISO C23 or later */
   E_U8CHAR_STRING_C11           = 262, /* unicode string literal requires ISO C 11 or later */
   W_PREFIXED_STRINGS            = 263, /* sequence of differently prefixed string literals */
+  W_DIGIT_SEPARATOR_C23         = 264, /* digit separators require ISO C23 or later */
   
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
